# cookiecutter-pypackage-minimal

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: CHANGELOG.md  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
{{cookiecutter.repo_name}}/tests/unit/: test_{{cookiecutter.package_name}}_cli.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: cli.py
