[metadata]
name = {{cookiecutter.repo_name}}
summary = {{cookiecutter.project_short_description}}
description-file = 
    README.md
author = {{cookiecutter.full_name}}
author-email = {{cookiecutter.email}}
classifier = 
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages = {{cookiecutter.package_name}}

[entry_points]
console_scripts = 
    {{cookiecutter.repo_name}} = {{cookiecutter.package_name}}.cli:main

[pbr]
skip_changelog = True
skip_authors = True
skip_reno = True

[flake8]
exclude =
  *.egg-info,
  *.pyc,
  .cache,
  .eggs
  .git,
  .tox,
  __pycache__,
  build,
  dist,
  docs/source/conf.py,
  tests/fixtures/*
import-order-style = google
max-complexity = 10
max-line-length = 120

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
mock_traceback_monkeypatch = false
mock_use_standalone_module = false
markers = 
    datafiles

